--- a/about.qmd
+++ b/about.qmd
@@ -2,4 +2,9 @@
 title: "About"
 ---
 
-About this site
+
+Bienvenue sur PandasCours, votre destination pour maîtriser Pandas, la bibliothèque Python essentielle pour l'analyse de données. 
+
+Découvrez nos cours structurés, nos tutoriels pratiques
+
+Rejoignez-nous dès maintenant et explorez le monde de l'analyse de données avec Pandas!
