--- a/about.qmd
+++ b/about.qmd
@@ -1,10 +1,26 @@
 ---
-title: "About"
+title: "PANDAS"
+about:
+  template: jolla
+  image: pandas.png
+  links:
+    - icon: twitter
+      text: twitter
+      href: https://twitter.com
+    - icon: github
+      text: Github
+      href: https://github.com
 ---
 
+Finley Malloc est leS scientifique en chef des données chez Wengo Analytics. Apprenez-en davantage sur les pandas avec lui.
+
+
+## MORE AND MORE
 
 Bienvenue sur PandasCours, votre destination pour maîtriser Pandas, la bibliothèque Python essentielle pour l'analyse de données. 
 
 Découvrez nos cours structurés, nos tutoriels pratiques
 
 Rejoignez-nous dès maintenant et explorez le monde de l'analyse de données avec Pandas!
+
+---
