--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "PANDAS"
+title: "About PandasLab"
 about:
   template: jolla
   image: image/pandas.png
@@ -22,3 +22,4 @@ Bienvenue sur PandasCours, votre destination pour maîtriser Pandas, la biblioth
 Découvrez nos cours structurés, nos tutoriels pratiques
 
 Rejoignez-nous dès maintenant et explorez le monde de l'analyse de données avec Pandas!
+
