--- a/exercice-pan.qmd
+++ b/exercice-pan.qmd
@@ -1,3 +1,11 @@
 ---
 title: "Exercice-pan"
 ---
+
+<iframe
+  id="inlineFrameExample"
+  title="Inline Frame Example"
+  width= "1000"
+  height= "800"
+  src="exopan.html">
+</iframe>
