--- a/exercice-pan.qmd
+++ b/exercice-pan.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exercice-pan"
+title: "Exercices"
 ---
 
 <iframe
@@ -7,5 +7,5 @@ title: "Exercice-pan"
   title="Inline Frame Example"
   width= "1000"
   height= "800"
-  src="exopan.html">
+  src="exercice/exopan.html">
 </iframe>
