--- a/exercice-viz.qmd
+++ b/exercice-viz.qmd
@@ -1,3 +1,13 @@
 ---
-title: "Exercice-viz"
+title: "Exercices"
 ---
+
+
+<iframe
+  id="inlineFrameExample"
+  title="Inline Frame Example"
+  width= "1000"
+  height= "800"
+  src="exercice/exoviz.html">
+</iframe>
+
