--- a/py-syntaxe.qmd
+++ b/py-syntaxe.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Syntaxe - Variables"
+title: "Exercices"
+about:
+  image: image/ari.png
 ---
 
 Commençons avec des exercices pour vous rappeler la syntaxe et les variables.
