--- a/python.qmd
+++ b/python.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Python basic"
+title: "Cours"
 ---
 
 Nous allons revoir les bases du langage python pour s'assurer que vous êtes bien apte à apprendre [Pandas](pandas.qmd).
@@ -25,4 +25,6 @@ permet de transformer explicitement une variable d’un type à un autre.
 -Privilégier l'écriture du code en anglais.
 
 
-Si vous cherchez à apprendre Pandas, c'est que vous connaissez déjà le langage *Python*. Alors sans plus tarder, commençons les exercices de remise à niveau.
+Si vous cherchez à apprendre Pandas, c'est que vous connaissez déjà le langage *Python*. Alors sans plus tarder, commençons les exercices de remise à niveau. 
+
+cliquer [ici](py-syntaxe.qmd):
