--- a/visualisation.qmd
+++ b/visualisation.qmd
@@ -1,5 +1,13 @@
 ---
 title: "Cours"
-about:
-  image: image/ari.png
 ---
+Bienvenue à la visualisation de données !
+
+Dans ce cours pratique, vous apprendrez à améliorer vos visualisations de données avec seaborn, un outil puissant mais facile à utiliser. Pour utiliser seaborn, vous apprendrez également quelques bases de la programmation en Python, un langage de programmation populaire. Cela dit,
+
+le cours est destiné à ceux qui n'ont aucune expérience préalable en programmation, et
+chaque graphique utilise un code court et simple, rendant seaborn beaucoup plus rapide et plus facile à utiliser que de nombreux autres outils de visualisation de données (comme Excel, par exemple).
+
+Donc, si vous n'avez jamais écrit une ligne de code et que vous voulez apprendre le strict minimum pour commencer à créer des graphiques plus rapidement et plus attrayants dès aujourd'hui, vous êtes au bon endroit ! Pour jeter un œil à certains des graphiques que vous réaliserez, consultez les figures ci-dessous.
+
+Passons à la [pratique](exercice-viz.qmd)
