--- a/about.qmd
+++ b/about.qmd
@@ -1,20 +1,20 @@
 ---
-title: "ABOUT"
+title: "ABOUT ME"
 about:
   template: jolla
-  image: image/pandas.png
+  image: image/me.jpg
   links:
-    - icon: twitter
-      text: twitter
-      href: https://twitter.com
+    - icon: linkedin
+      text: linkedin
+      href: www.linkedin.com/in/melissatchamdja
     - icon: github
       text: Github
-      href: https://github.com
+      href: https://github.com/TchamdjaM
 ---
 
-Finley Malloc est un scientifique en chef des données chez xxxx. 
-
-Apprenez-en davantage sur les pandas avec lui.
+Hello moi c'est Mélissa. 
+Apprenez-en davantage sur Python avec moi.
+Merci.
 
 
 ## MORE AND MORE
