--- a/pandas.qmd
+++ b/pandas.qmd
@@ -1,29 +1,47 @@
-::: {#fig-data_visualization}
-
-<img width="560" height="315" src="image/progra.jpg"></img>
-
-<a href="https://fr.freepik.com/vecteurs-libre/ordinateur-portable-icone-isometrique-code-programme-developpement-logiciels-applications-programmation-neon-sombre_4102879.htm#query=programmation&position=0&from_view=keyword&track=sph&uuid=2d3fb13e-9b7a-41de-b249-441a679ff320">Image de fullvector</a> sur Freepik
-
-:::
-
+---
+title: "Cours"
+---
 <div style="text-align: center;"><strong>Explorez le pouvoir de la Data Visualisation avec R et Python</strong></div>
 
-<div style="text-align: center;">Saviez-vous que vos données ont des histoires à raconter ?</div>
-<div style="text-align: center;">Découvrez comment les visualiser avec R et Python!</div>
 <br>
 
-Bienvenue sur DATAVIZ, le site dédié à la data visualisation avec R et Python. Ici, vous trouverez tout ce dont vous avez besoin pour transformer vos données brutes en visualisations informatives et percutantes. Que vous soyez novice ou utilisateur expérimenté, plongez dans le monde fascinant de la visualisation de données et découvrez comment R et Python peuvent vous aider à créer des graphiques qui captivent et informent.
+### 5.2 Pandas
+Le module `pandas` est une bibliothèque de programmation Python extrêmement populaire, utilisée principalement pour l'analyse de données. Elle fournit des structures de données puissantes et flexibles conçues pour travailler facilement avec des données structurées (comme les tableaux et les séries temporelles) de manière intuitive et efficace. Voici quelques aspects clés de `pandas` :
 
-Ce que vous trouverez sur ce site :
+1. **Structures de données principales** : 
+   - **DataFrame** : une structure de données tabulaire avec des lignes et des colonnes étiquetées. C'est similaire à une feuille de calcul Excel ou à une table SQL.
+   - **Series** : une colonne dans un DataFrame. C'est similaire à une liste en Python, mais avec des fonctionnalités supplémentaires offertes par `pandas`.
 
-<ul>
-  <li>Des tutoriels pas à pas pour apprendre les bases de la visualisation de données avec ces deux langages.</li>
-  <li>Des astuces et des techniques avancées pour créer des graphiques interactifs et dynamiques.</li>
-  <li>Des exemples pratiques et des exercices pour vous inspirer dans vos propres projets de visualisation de données.</li>
-</ul>
+2. **Manipulation de données** : 
+   - Vous pouvez effectuer des opérations courantes de manipulation de données telles que le tri, le filtrage, la fusion, la jointure et la concaténation.
+   - `pandas` est excellent pour gérer des données manquantes, remplacer des valeurs, grouper des données, etc.
 
-Prêt à commencer ? Explorez nos ressources dès maintenant et laissez vos données raconter leur histoire !
+3. **Analyse de données** :
+   - Il offre des outils pour l'exploration de données, comme le calcul de statistiques et la visualisation.
+   - Vous pouvez facilement agir sur chaque colonne d'un DataFrame, par exemple pour appliquer des fonctions mathématiques ou de résumé statistique.
 
+4. **Interfaçage avec d'autres formats de données** :
+   - `pandas` peut lire et écrire dans différents formats de fichiers comme CSV, Excel, JSON, HTML, SQL, etc.
+
+5. **Avantages en termes de performance** :
+   - Bien que Python soit un langage interprété, `pandas` est construit sur des bibliothèques comme NumPy, ce qui lui permet d'être rapide et efficace.
+
+6. **Utilisation dans divers domaines** :
+   - Il est largement utilisé dans la finance, l'économie, la statistique, l'analyse de données, la science des données, et plus encore.
+
+Pour commencer avec `pandas`, vous devez d'abord l'installer (si ce n'est pas déjà fait) en utilisant pip :
+
+```python
+pip install pandas
+```
+
+Et ensuite, vous pouvez l'importer dans votre script Python :
+
+```python
+import pandas as pd
+```
+
+`pd` est un alias standard pour `pandas`, utilisé pour simplifier la référence à la bibliothèque dans le code.
 <a href=datar.qmd class="bouton">📈 Commencer l'exploration avec R</a>
 <br>
 <a href=datap.qmd class="bouton">📊 Commencer l'exploration avec Python</a>
