--- a/visualisation.qmd
+++ b/visualisation.qmd
@@ -8,7 +8,7 @@ Dans ce cours pratique, vous apprendrez à améliorer vos visualisations de donn
 le cours est destiné à ceux qui n'ont aucune expérience préalable en programmation, et
 chaque graphique utilise un code court et simple, rendant seaborn beaucoup plus rapide et plus facile à utiliser que de nombreux autres outils de visualisation de données (comme Excel, par exemple).
 
-Donc, si vous n'avez jamais écrit une ligne de code et que vous voulez apprendre le strict minimum pour commencer à créer des graphiques plus rapidement et plus attrayants dès aujourd'hui, vous êtes au bon endroit ! Pour jeter un œil à certains des graphiques que vous réaliserez, consultez les figures ci-dessous.
+Donc, si vous n'avez jamais écrit une ligne de code et que vous voulez apprendre le strict minimum pour commencer à créer des graphiques plus rapidement et plus attrayants dès aujourd'hui, vous êtes au bon endroit!
 
 <br>
 <a href=py-syntaxe.qmd class="bouton">📊Passons à la pratique</a>
